- Lauffähigkeit mit neuerem Chrome wiederhergestellt